# VFX

./: .gitignore  .gitmodules  CMakeLists.txt  imgui.ini
assets/shaders/: blit.frag  blit.vert  cube.frag  cube.vert  default.frag  default.vert  geometry.frag  geometry.vert  globals.glsl  gui.frag  gui.vert  imgui.frag  imgui.vert  particles.frag  particles.vert  screen.frag  screen.vert  sdf.frag  sdf.vert  shader.vert  simple_shader.frag  simple_shader.vert
examples/: Application.cpp  Application.hpp  CMakeLists.txt  Camera.hpp  Core.hpp  DrawList.cpp  DrawList.hpp  GameObject.cpp  GameObject.hpp  ImGuiRenderer.cpp  ImGuiRenderer.hpp  Math.hpp  Mesh.hpp  Renderer.cpp  Renderer.hpp  Time.cpp  Time.hpp  camera.hpp  main.cpp  pipeline.hpp  renderer.hpp  widgets.hpp
examples/circles-02/: CMakeLists.txt
examples/circles-02/src/: GuiRenderer.cpp  Renderer.cpp  Renderer.hpp  main.cpp
examples/common/: CMakeLists.txt
examples/common/imgui/: imconfig.h  imgui.cpp  imgui_draw.cpp  imgui_internal.h  imgui_widgets.cpp
examples/common/imgui/docs/: CONTRIBUTING.md  FAQ.md
examples/common/src/: Animation.hpp  Application.cpp  Application.hpp  Assets.hpp  Canvas.hpp  Core.hpp  Delegate.hpp  Enum.hpp  GltfBundle.hpp  GraphView.hpp  Graphics.hpp  GuiRenderer.cpp  GuiRenderer.hpp  ImGuiBackend.cpp  ImGuiBackend.hpp  Iter.hpp  JsonElement.hpp  JsonParser.cpp  JsonParser.hpp  Mesh.hpp  Node.hpp  Object.hpp  Primitive.hpp  Scene.hpp  Signal.hpp  Skin.hpp  UIContext.hpp  UIRenderer.cpp  UIRenderer.hpp  UISize.hpp  Window.cpp  Window.hpp  filesystem.cpp  filesystem.hpp  fstream.cpp  fstream.hpp  optional.hpp  simd.hpp
examples/common/src/NotSwiftUI/: Alignment.hpp  NotSwiftUI.hpp  UIColor.hpp  UIContext.hpp  UIPoint.hpp  UISize.hpp  View.hpp
examples/common/src/NotSwiftUI/Core/: Alignment.hpp  Color.hpp  Point.hpp  ProposedSize.hpp  Rect.hpp  Size.hpp
examples/common/src/NotSwiftUI/Modifiers/: FixedFrame.hpp  FixedSize.hpp  FlexibleFrame.hpp  ForegroundColor.hpp
examples/common/src/NotSwiftUI/Shapes/: Border.hpp  Circle.hpp  Rectangle.hpp  Shape.hpp
examples/common/src/NotSwiftUI/Views/: Button.hpp  HStack.hpp  Overlay.hpp  ShapeView.hpp  Slider.hpp  Text.hpp  VStack.hpp  View.hpp
examples/geometry-03/: CMakeLists.txt
examples/geometry-03/src/: Renderer.cpp  Renderer.hpp  main.cpp
examples/menu-06/: CMakeLists.txt
examples/menu-06/src/: main.cpp
examples/minecraft-07/: CMakeLists.txt
examples/minecraft-07/src/: main.cpp
examples/minecraft-07/src/block/: Axis.hpp  Block.hpp  BlockState.cpp  BlockState.hpp  Direction.hpp  Material.hpp  Property.hpp  PropertyValue.hpp  PushReaction.hpp  StateDefinition.hpp
examples/minecraft-07/src/loaders/: BlockLoader.hpp  MaterialLoader.hpp
examples/minecraft-07/src/model/: BakedModel.hpp  BakedQuad.hpp  BakedVertex.hpp  BlockElement.cpp  BlockElement.hpp  BlockElementFace.cpp  BlockElementFace.hpp  BlockElementRotation.hpp  BlockModel.cpp  BlockModel.hpp  BlockModelDefinition.cpp  BlockModelDefinition.hpp  Condition.hpp  FaceInfo.hpp  ModelBakery.cpp  ModelBakery.hpp  ModelManager.cpp  ModelManager.hpp  MultiPart.cpp  MultiPart.hpp  MultiPartBakedModel.hpp  MultiVariant.cpp  MultiVariant.hpp  Predicate.hpp  Selector.hpp  SimpleBakedModel.hpp  UnbakedModel.hpp  Variant.cpp  Variant.hpp  WeightedBakedModel.hpp
examples/minecraft-07/src/registry/: DefaultedRegistry.hpp  Holder.hpp  MappedRegistry.hpp  Registry.hpp  ResourceLocation.hpp
examples/minecraft-07/src/texture/: NativeImage.cpp  NativeImage.hpp  Sprite.cpp  Sprite.hpp  SpriteAtlas.cpp  SpriteAtlas.hpp  TextureManager.hpp  TexturePacker.cpp  TexturePacker.hpp
examples/nodes-05/: CMakeLists.txt
examples/nodes-05/src/: Renderer.cpp  Renderer.hpp  main.cpp
examples/particles-04/: CMakeLists.txt
examples/particles-04/src/: Particle.hpp  ParticleEmitter.hpp  ParticleSystem.hpp  Renderer.cpp  Renderer.hpp  RocketParticleEmitter.hpp  main.cpp
examples/raytrace-07/: CMakeLists.txt
examples/raytrace-07/src/: main.cpp
examples/triangle-01/: CMakeLists.txt
examples/triangle-01/src/: Renderer.cpp  Renderer.hpp  main.cpp
src/: assets.hpp  buffer.cpp  buffer.hpp  context.cpp  context.hpp  device.cpp  device.hpp  display.hpp  drawable.cpp  drawable.hpp  glsl.hpp  graph.hpp  group.cpp  group.hpp  layer.cpp  material.cpp  material.hpp  mesh.cpp  mesh.hpp  pass.cpp  pass.hpp  pipeline.hpp  queue.cpp  queue.hpp  shader.hpp  signal.hpp  surface.cpp  swapchain.cpp  swapchain.hpp  texture.cpp  texture.hpp  types.hpp  ui.hpp  vulkan.cpp  window.cpp  window.hpp
src/gfx/: Adapter.cpp  Adapter.hpp  Application.cpp  Application.hpp  BindGroupLayout.cpp  BindGroupLayout.hpp  Buffer.cpp  Buffer.hpp  ClearColor.hpp  CommandBuffer.cpp  CommandBuffer.hpp  CommandQueue.cpp  CommandQueue.hpp  ComputePipelineState.cpp  ComputePipelineState.hpp  Context.cpp  Context.hpp  DescriptorSet.cpp  DescriptorSet.hpp  Device.cpp  Device.hpp  Drawable.cpp  Drawable.hpp  Function.cpp  Function.hpp  GFX.hpp  Instance.cpp  Instance.hpp  Library.cpp  Library.hpp  ManagedObject.hpp  Object.hpp  RenderPipelineState.cpp  RenderPipelineState.hpp  Sampler.cpp  Sampler.hpp  Surface.cpp  Surface.hpp  Swapchain.cpp  Swapchain.hpp  (+6 more)
src/vfx/: buffer.cpp  buffer.hpp  delegate.hpp  device.cpp  device.hpp  group.cpp  group.hpp  layer.hpp  material.cpp  material.hpp  pass.hpp  queue.cpp  queue.hpp  texture.hpp  vfx.hpp
