add_executable(minecraft-07
    src/block/Axis.hpp
    src/model/BakedModel.hpp
    src/model/BakedQuad.hpp
    src/model/BakedVertex.hpp
    src/block/Block.hpp
    src/model/BlockElement.cpp
    src/model/BlockElement.hpp
    src/model/BlockElementFace.cpp
    src/model/BlockElementFace.hpp
    src/model/BlockElementRotation.hpp
    src/loaders/BlockLoader.hpp
    src/model/BlockModel.cpp
    src/model/BlockModel.hpp
    src/model/BlockModelDefinition.cpp
    src/model/BlockModelDefinition.hpp
    src/block/BlockState.cpp
    src/block/BlockState.hpp
    src/model/Condition.hpp
    src/registry/DefaultedRegistry.hpp
    src/block/Direction.hpp
    src/model/FaceInfo.hpp
    src/main.cpp
    src/block/Material.hpp
    src/loaders/MaterialLoader.hpp
    src/model/ModelBakery.cpp
    src/model/ModelBakery.hpp
    src/model/ModelManager.cpp
    src/model/ModelManager.hpp
    src/model/MultiPart.cpp
    src/model/MultiPart.hpp
    src/model/MultiPartBakedModel.hpp
    src/model/MultiVariant.cpp
    src/model/MultiVariant.hpp
    src/model/Predicate.hpp
    src/block/Property.hpp
    src/block/PushReaction.hpp
    src/registry/ResourceLocation.hpp
    src/model/Selector.hpp
    src/model/SimpleBakedModel.hpp
    src/texture/Sprite.cpp
    src/texture/Sprite.hpp
    src/texture/SpriteAtlas.cpp
    src/texture/SpriteAtlas.hpp
    src/block/StateDefinition.hpp
    src/texture/TextureManager.hpp
    src/texture/TexturePacker.cpp
    src/texture/TexturePacker.hpp
    src/model/UnbakedModel.hpp
    src/model/Variant.cpp
    src/model/Variant.hpp
    src/model/WeightedBakedModel.hpp
    src/texture/NativeImage.hpp
    src/texture/NativeImage.cpp
        src/registry/Registry.hpp src/registry/Holder.hpp src/registry/MappedRegistry.hpp)
set_target_properties(minecraft-07 PROPERTIES CXX_EXTENSIONS OFF CXX_STANDARD 23 CXX_STANDARD_REQUIRED ON)
target_link_libraries(minecraft-07 PRIVATE common gfx)
target_include_directories(minecraft-07 PRIVATE src)